k8s_use/ingress-controller/fileserver/fileserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fileserver
  name: fileserver
  namespace: op
spec:
  minReadySeconds: 10
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: fileserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fileserver
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: fileserver
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        image: harbor-test.eniot.io/op/fileserver:tag_v1.1
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 3
        name: fileserver
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 3
          periodSeconds: 3
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 3
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/apps/config
          name: op-env
        - mountPath: /opt/nginx/html/dir
          name: pvc-fileserver
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: app.properties
            path: app.properties
          - key: client.xml
            path: cat/client.xml
          name: op-env
        name: op-env
      - name: pvc-fileserver
        persistentVolumeClaim:
          claimName: fileserver
